fdo#76163 Fix for file corruption which contains fields and hyperlink

Field inside a hyperlink closed after the ending tag of hyperlink, which corrupted the RT file.

Reviewed on:
	https://gerrit.libreoffice.org/8688

Change-Id: Ie6fb5eff19c941819ca8c6193b3a6471de12c3e6